test/fail/bad-shared-async-star.mo

actor {

  public func bad()  : async* Nat {
    666
  };

}